syntax = "proto3";
option go_package = github.com/openmesh-network/core/internal/bft/types";

enum TransactionType {
  NormalTransaction = 0;
  VerificationTransaction = 1;
  ResourceTransaction = 2;
  NodeRegistrationTransaction = 3;
}

message VerificationTransactionData {
  string attestation = 1;
  string cid = 2;
  string datasource = 3;
  int64 timestamp = 4;
}

message ResourceTransactionData {
  double totalResources = 1;
  double rewardedResources = 2;
}

message NormalTransactionData {
  double transactionAmount = 1;
  string sentTo = 2;
}

// Node Registration Transaction Data
message NodeRegistrationTransactionData {
  string nodeAddress = 1;
  string nodeAttestation = 2;
  string nodeSignature = 3;
}

message Transaction {
  string owner = 1;
  string signature = 2;
  TransactionType type = 3;
  oneof data {
    VerificationTransactionData verificationData = 4; 
    ResourceTransactionData resourceData = 5; 
    NormalTransactionData normalData = 6; 
    NodeRegistrationTransactionData nodeRegistrationData = 7; 
  }
}
